# influflow-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.ui  README.md  deploy.sh  deploy_check.py  langgraph.json  makefile  pyproject.toml  railway-api.json  railway-ui.json  railway.json  start.py  start_api.py  start_ui.py
src/influflow/: __init__.py  configuration.py  graph.py  prompt.py  prompts.py  state.py  structured_output.py  styler.py  ui.py  utils.py
src/influflow/ai/: __init__.py  configuration.py  prompt.py  state.py  utils.py
src/influflow/ai/graph/: __init__.py  generate_image.py  generate_tweet.py  modify_outline_structure.py  modify_single_tweet.py
src/influflow/api/: auth.py  errcode.py  main.py  models.py
src/influflow/database/: __init__.py  schema.sql  singleton.py  storage.py  tweet_thread.py
src/influflow/graph/: generate_tweet.py  modify_outline_structure.py  modify_single_tweet.py
src/influflow/models/: tweet_thread.py
src/influflow/services/: twitter_service.py
src/open_deep_research/: configuration.py  graph.py  styler.py  ui.py  utils.py
test/: __init__.py  conftest.py  test_model_comparison.py  test_quick_validation.py  test_tweet_generate.py  test_tweet_thread_db.py  test_user_input_analysis.py
tests/: test_styler.py
